# prophet

./: .gitignore  README.md  pyproject.toml
prophet/: 1_pages.ipynb  2_chapters.ipynb  3_sentences.ipynb  5_sentences_sizes.ipynb  book_registry.py  loaders.ipynb
