[tool.poetry]
name = "prophet"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo Costa <gustavo@arcos.org.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
langchain = "^0.2.9"
pypdf = "^4.3.0"
langchain-community = "^0.2.7"
pyarrow = "^17.0.0"
unstructured = "^0.14.10"
unstructured-client = "^0.24.1"
python-dotenv = "^1.0.1"
matplotlib = "^3.9.1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
